# shiftpicdate-gui

./: .drone.yml  CMakeLists.txt  LICENSE  Notes.md  Notes.txt  README.md  data.h  fsdialog.cpp  fsdialog.h  fsdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  shiftpicdate.cpp  shiftpicdate.h  shiftpicdate_win32.cpp  shiftpicdate_win32.h
.github/workflows/: ccpp.yml
res/: res.qrc
res/ts/: french.ts
